# wnum

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: mnist.rs
examples/mnist/: Cargo.toml
src/array/: arr.rs  data.rs  dim.rs  error.rs  mod.rs  op.rs  unit.rs
src/dtype/cpu/: dtype.rs  mod.rs
src/dtype/cuda/: f32.rs  mod.rs
src/dtype/cuda/f32/: Makefile  f32.cu  utils.cu
src/tensor/: base.rs  log.rs  op.rs  varmap.rs
src/tensor/dataset/: mnist.rs
src/tensor/module/: linear.rs  loss.rs  mod.rs  optim.rs
src/tests/: arr.rs  data.py  matmul.rs  tensor.rs  tensor_cuda.rs
wnum/: Cargo.toml  build.rs
wnum/src/: lib.rs
wnum/src/array/: arr.rs  data.rs  dim.rs  op.rs  unit.rs  vec.rs
wnum/src/dtype/: mod.rs  utils.rs
wnum/src/dtype/cpu/: boolean.rs  dtype.rs  f32.rs  mod.rs  simd.rs
wnum/src/dtype/cuda/: error.rs  f32.rs
wnum/src/dtype/cuda/f32/: Makefile  f32.cu  utils.cu  utils.cuh
wnum/src/tensor/: base.rs  mod.rs  op.rs  varmap.rs
wnum/src/tensor/dataset/: mnist.rs
wnum/src/tensor/module/: linear.rs  loss.rs  mod.rs  norm.rs  optim.rs
wnum/src/tests/: arr.rs  arr_cuda.rs  cuda.rs  matmul.rs  mod.rs  tensor.rs  tensor_cuda.rs  test.py
wnum/tests/: arr.rs  arr_cuda.rs  cuda.rs  mod.rs  module.rs  tensor.rs  tensor_cuda.rs  test.py
