[package]
name = "wnum"
version = "0.1.0"
edition = "2024"
readme = "README.md"


[dependencies]
rand = { version = "0.9.0", optional = true }
rand_distr = { version = "0.5.1", optional = true }
log = { version = "0.4.26", optional = true }
flate2 = { version = "1.1.0", optional = true }
chrono = { version = "0.4.40", optional = true }
simplelog = { version = "0.12.2", optional = true }
time = { version = "0.3.37", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }


[dev-dependencies]
log = "0.4.26"
chrono = "0.4.40"
simplelog = "0.12.2"
time = "0.3.37"
half = "2.4.1"
flate2 = "1.1.0"
kdam = "0.6.2"
rand_distr = "0.5.1"
rayon = "1.10.0"


[features]
default = ["cuda", "tensor", "logger", "random", "module", "dataset"]

simd = []
cuda = []
tensor = ["serde", "serde_json"]
random = ["rand", "rand_distr"]
logger = ["log", "simplelog", "chrono", "time"]
module = ["rand"]
dataset = ["flate2", "rand"]
