[package]
name = "wnum"
version = "0.0.1"
edition = "2024"
license = "	GPL-3.0-or-later"
repository = "https://github.com/LonlyWinter/wnum"
description = "A deep-learning and numerical-computing framework with Rust"
keywords = ["Maching Learning", "Numerical Computing"]


[dependencies]
rand = { version = "0.9.0", optional = true }
rand_distr = { version = "0.5.1", optional = true }
log = { version = "0.4.26", optional = true }
flate2 = { version = "1.1.0", optional = true }
chrono = { version = "0.4.40", optional = true }
simplelog = { version = "0.12.2", optional = true }
time = { version = "0.3.37", optional = true }
serde = { version = "1.0.219", features = ["derive"], optional = true }
serde_json = { version = "1.0.140", optional = true }


[dev-dependencies]
rayon = "1.10.0"


[features]
default = ["logger", "random", "tensor", "cuda", "module", "dataset", "dataframe", "img", "video", "features2d", "ml", "objdetect"]

simd = []
cuda = []
tensor = ["serde", "serde_json"]
random = ["rand", "rand_distr"]
logger = ["log", "simplelog", "chrono", "time"]
module = ["rand"]
dataset = ["flate2", "rand"]
dataframe = []
img = []
video = []
features2d = []
ml = []
objdetect = []
